<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fat\'erminator 2.0</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="user_info_title">Input your private information !</string>
    <string name="name">name</string>
    <string name="sex">sex</string>
    <string name="male">male</string>
    <string name="female">female</string>
	<string name="age">age</string>
	<string name="weight">weight</string>
	<string name="height">height</string>
	<string name="back">Back</string>
	<string name="save">Save</string>
	<string name="weight_unit">kg</string>
	<string name="height_unit">cm</string>
	<string name="menu1">Start exercise</string>
	<string name="menu2">Get exercise history</string>
	<string name="menu3">Input exercise program</string>
	<string name="menu4">Get exercise tips</string>
	<string name="menu5">Modify user private info</string>
</resources>
